# QmlControls

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Run.pro
Acrylic/: CMakeLists.txt  main.qml  qml.qrc
AsyncHasher/: AsyncHasher.pro  CMakeLists.txt  asynchasher.cpp  asynchasher.h  main.cpp  main.qml
Button/: Button.pro  CMakeLists.txt  DelButton.qml  DelIconButton.qml  delbuttontype.h  main.cpp  main.qml  qml.qrc
ColorPicker/: CMakeLists.txt  ColorPicker.qml  ColorPickerPopup.qml  main.cpp  main.qml
CustomControls/: CMakeLists.txt  Run.pro
CustomControls/ColorPicker/: CMakeLists.txt  ColorPicker.qml  qml.qrc  qml_qmlcache.qrc
CustomControls/EditorImageHelper/: EditorImageHelper.pro  RichTextArea.qml  editorimagehelper.cpp  qml_qmlcache.qrc
CustomControls/FpsItem/: CMakeLists.txt  fpsitem.cpp  main.cpp  main.qml
CustomControls/FramelessWindow/framelesswindow_all/: CMakeLists.txt  framelesswindow.cpp  framelesswindow.h  main.cpp
CustomControls/FramelessWindow/framelesswindow_win/: CMakeLists.txt  FramelessWindow.pro  framelesswindow.cpp  main.qml  qml_qmlcache.qrc
CustomControls/GlowCircularImage/: CMakeLists.txt  CircularImage.qml  GlowRectangle.qml  qml.qrc  qml_qmlcache.qrc
CustomControls/HistoryEditor/: CMakeLists.txt
CustomControls/MagicFish/: CMakeLists.txt  MagicFish.pro  magicfish.cpp  main.qml
CustomControls/Notification/: qml_qmlcache.qrc
CustomControls/PolygonWindow/: CMakeLists.txt  PolygonWindow.pro  main.cpp  main.qml  polygonwindow.cpp  qml.qrc  qml_qmlcache.qrc
CustomControls/VideoOutput/: CMakeLists.txt  VideoOutput.pro  main.cpp  main.qml  qml_qmlcache.qrc  test.yuv
CustomControls/WaterfallFlow/: CMakeLists.txt  main.qml  qml.qrc  qml_qmlcache.qrc
CustomControls/WaveProgress/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qml_qmlcache.qrc
CustomControls/common/: DelIcon.qml
DelAsyncHasher/: CMakeLists.txt  DelAsyncHasher.pro  delasynchasher.cpp  delasynchasher.h  main.cpp  main.qml
DelButton/: CMakeLists.txt  DelButton.qml  DelCaptionButton.qml  DelIconButton.qml  main.cpp  main.qml  qml.qrc
DelDivider/: CMakeLists.txt  DelDivider.qml  main.qml
DelRoundRectangle/: CMakeLists.txt  delrectangle.h  main.cpp  main.qml  qml.qrc
DelScrollBar/: CMakeLists.txt  DelScrollBar.qml  main.qml  qml.qrc
DelSystemThemeHelper/: CMakeLists.txt  DelSystemThemeHelper.pro  delsystemthemehelper.cpp  delsystemthemehelper.h  main.cpp  main.qml
DelTabView/: CMakeLists.txt  DelTabView.qml  delrectangle.cpp  main.cpp  main.qml  qml.qrc
DelegateUI_Qt5/: CMakeLists.txt
DelegateUI_Qt5/.cmake/: DelegateUIHelper.cmake  QmlPluginHelper.cmake  WinResource.rc.in
DelegateUI_Qt5/gallery/: CMakeLists.txt  UpdateLists.json  qml.qrc  resource.qrc  shaders.qrc
DelegateUI_Qt5/gallery/cpp/: customtheme.cpp  customtheme.h  datagenerator.cpp  datagenerator.h  main.cpp  themeswitchitem.cpp  themeswitchitem.h
DelegateUI_Qt5/gallery/qml/: AboutPage.qml  Gallery.qml  HomePage.qml  SettingsPage.qml
DelegateUI_Qt5/gallery/qml/Controls/: CodeBox.qml  CodeRunner.qml  Description.qml  MySlider.qml
DelegateUI_Qt5/gallery/qml/Examples/DataDisplay/: ExpAvatar.qml  ExpBadge.qml  ExpCard.qml  ExpCarousel.qml  ExpCollapse.qml  ExpTabView.qml  ExpTableView.qml  ExpTag.qml  ExpTimeline.qml  ExpToolTip.qml  ExpTourFocus.qml  ExpTourStep.qml
DelegateUI_Qt5/gallery/qml/Examples/DataEntry/: ExpAutoComplete.qml  ExpCheckBox.qml  ExpDatePicker.qml  ExpInput.qml  ExpInputNumber.qml  ExpOTPInput.qml  ExpRadio.qml  ExpRadioBlock.qml  ExpRate.qml  ExpSelect.qml  ExpSlider.qml  ExpSwitch.qml  ExpTimePicker.qml
DelegateUI_Qt5/gallery/qml/Examples/Effect/: ExpAcrylic.qml
DelegateUI_Qt5/gallery/qml/Examples/Feedback/: ExpDrawer.qml  ExpMessage.qml  ExpProgress.qml  ExpWatermark.qml
DelegateUI_Qt5/gallery/qml/Examples/General/: ExpButton.qml  ExpButtonBlock.qml  ExpCaptionButton.qml  ExpCopyableText.qml  ExpIconButton.qml  ExpIconText.qml  ExpPopup.qml  ExpRectangle.qml  ExpText.qml  ExpWindow.qml
DelegateUI_Qt5/gallery/qml/Home/: AboutPage.qml  HomePage.qml  SettingsPage.qml
DelegateUI_Qt5/gallery/shaders/: effect1.frag  effect1.frag.qsb  effect1.vert.qsb  effect2.frag  effect2.frag.qsb  effect2.vert
DelegateUI_Qt5/src/: CMakeLists.txt  qml.qrc  resource.qrc  shaders.qrc  theme.qrc
DelegateUI_Qt5/src/cpp/: delapp.cpp  delapp.h  deldefinitions.h  delegateui_plugin.cpp  delegateuiplugin.cpp  delegateuiplugin.h  delglobal.h
DelegateUI_Qt5/src/cpp/controls/: deliconfont.cpp  deliconfont.h  delrectangle.cpp  delrectangle.h  delwatermark.cpp  delwatermark.h  delwindowagent.cpp  delwindowagent.h
DelegateUI_Qt5/src/cpp/theme/: delcolorgenerator.cpp  delcolorgenerator.h  delsizegenerator.cpp  delsizegenerator.h  delsystemthemehelper.cpp  delsystemthemehelper.h  deltheme.cpp  deltheme.h  deltheme_p.h  delthemefunctions.cpp  delthemefunctions.h
DelegateUI_Qt5/src/cpp/utils/: delapi.cpp  delapi.h  delasynchasher.cpp  delasynchasher.h
DelegateUI_Qt5/src/imports/DelegateUI/: plugins.qmltypes  qmldir
DelegateUI_Qt5/src/shaders/: delrate.frag  deltour.frag
DelegateUI_Qt5/src/theme/: DelAutoComplete.json  DelBreadcrumb.json  DelButton.json  DelCaptionButton.json  DelCard.json  DelCarousel.json  DelCheckBox.json  DelCollapse.json  DelCopyableText.json  DelDatePicker.json  DelDivider.json  DelDrawer.json  DelIconText.json  DelInput.json  DelMenu.json  DelMessage.json  DelPagination.json  DelPopup.json  DelProgress.json  DelRadio.json  DelRate.json  DelScrollBar.json  DelSelect.json  DelSlider.json  DelSwitch.json  DelTabView.json  DelTableView.json  DelTag.json  DelTimePicker.json  DelTimeline.json  DelToolTip.json  DelTour.json  Index.json
HistoryEditor/: CMakeLists.txt  HistoryEditor.pro  historymodel.cpp  historymodel.h  main.cpp  main.qml
MagicFish/: .gitignore  CMakeLists.txt  magicfish.cpp  magicfish.h  magicpool.cpp  magicpool.h  main.cpp  main.qml
VideoOutput/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  videoframeprovider.cpp  videoframeprovider.h
Watermark/: CMakeLists.txt  Watermark.pro  main.cpp  main.qml  watermark.cpp  watermark.h
(+277 files in other folders)
