cmake_minimum_required(VERSION 3.16)

project(QmlControls)

add_subdirectory(GlowCircularImage)
add_subdirectory(MagicFish)
add_subdirectory(EditorImageHelper)
if (WIN32)
    add_subdirectory(FramelessWindow/framelesswindow_win)
endif()
add_subdirectory(FramelessWindow/framelesswindow_all)
add_subdirectory(PolygonWindow)
add_subdirectory(HistoryEditor)
add_subdirectory(VideoOutput)
add_subdirectory(FpsItem)
add_subdirectory(ColorPicker)
add_subdirectory(WaterfallFlow)
add_subdirectory(AsyncHasher)
add_subdirectory(Notification)
add_subdirectory(Timeline)
add_subdirectory(ResizeMouseArea)
add_subdirectory(WaveProgress)
add_subdirectory(Rate)
add_subdirectory(SystemThemeHelper)
