cmake_minimum_required(VERSION 3.16)

project(QmlControls)

#Others
add_subdirectory(GlowCircularImage)
add_subdirectory(MagicFish)
add_subdirectory(EditorImageHelper)
if (WIN32)
    add_subdirectory(FramelessWindow/framelesswindow_win)
endif()
add_subdirectory(FramelessWindow/framelesswindow_all)
add_subdirectory(PolygonWindow)
add_subdirectory(HistoryEditor)
add_subdirectory(VideoOutput)
add_subdirectory(FpsItem)
add_subdirectory(ColorPicker)
add_subdirectory(WaterfallFlow)
add_subdirectory(Notification)
add_subdirectory(Timeline)
add_subdirectory(ResizeMouseArea)
add_subdirectory(WaveProgress)

#DelegateUI Qt5
add_subdirectory(DelAsyncHasher)
add_subdirectory(DelRate)
add_subdirectory(DelSystemThemeHelper)
add_subdirectory(DelWatermark)
add_subdirectory(DelTour)
add_subdirectory(DelButton)
add_subdirectory(DelDivider)
add_subdirectory(DelSwitch)
add_subdirectory(DelAcrylic)
add_subdirectory(DelRoundRectangle)
add_subdirectory(DelTabView)
add_subdirectory(DelRadio)
add_subdirectory(DelRadioBlock)
add_subdirectory(DelCheckBox)
add_subdirectory(DelInput)
add_subdirectory(DelOTPInput)
add_subdirectory(DelSlider)
